<resources>
    <string name="app_name">MyProject</string>
    <string name="_2_010">2,010</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="percent">%</string>
    <string name="c">C</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_0">0</string>
    <string name="slash">/</string>
    <string name="plus_or_minus">±</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="period">.</string>
    <string name="equal">=</string>
    <string name="backspace_button_description">backspace button</string>
    <string name="_3">3</string>
</resources>