<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4">

    <com.google.android.material.button.MaterialButton
        style="@style/CalcButtonsColor"
        android:text="@string/percent"/>
    <com.google.android.material.button.MaterialButton
        style="@style/CalcButtons"
        android:text="@string/_0"/>
    <com.google.android.material.button.MaterialButton
        style="@style/CalcButtonsColor"
        android:text="@string/period"/>
    <com.google.android.material.button.MaterialButton
        style="@style/CalcButtonsColor"
        android:text="@string/equal"/>
</LinearLayout>